--- a/tex/texmf/tex/latex/mypackage/mypackage.sty
+++ b/tex/texmf/tex/latex/mypackage/mypackage.sty
@@ -19,6 +19,9 @@
 \renewcommand{\t}{\theta}
 \newcommand{\s}{\sigma}
 \renewcommand{\r}{\rho}
+\newcommand{\p}{\phi}
+\renewcommand{\P}{\Phi}
+\newcommand{\z}{\zeta}
 
 % Sets
 \let\originalemptyset\emptyset
@@ -29,6 +32,7 @@
 % Delimiters
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 
 \newcommand{\nimplies}{
   \mathrel{{\ooalign{\hidewidth$\not\phantom{=}$\hidewidth\cr$\implies$}}}}
