--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -12,12 +12,10 @@
 ** Initial package setup
    #+BEGIN_SRC emacs-lisp
   (require 'package)
-  (package-initialize)
   (setq package-archives '(("gnu" . "https://elpa.gnu.org/packages/")
 			   ("marmalade" . "https://marmalade-repo.org/packages/")
 			   ("melpa" . "https://melpa.org/packages/")
 			   ("org" . "http://orgmode.org/elpa/")))
-  (package-initialize)
    #+END_SRC
 
 ** Ensure [[https://github.com/jwiegley/use-package][use-package]] is avaliable, if not install it
@@ -48,6 +46,10 @@
    #+BEGIN_SRC emacs-lisp
      (setq gc-cons-threshold 50000000)
    #+END_SRC
+** Increase max read
+   #+begin_src emacs-lisp
+     (setq read-process-output-max (* 1024 1024))
+   #+end_src
 ** No startup message
 
    and start with an empty scratch
@@ -183,7 +185,7 @@
 ** Disable window elements
    Disable useless scrollbar
    #+BEGIN_SRC emacs-lisp
-  (scroll-bar-mode nil)
+  (scroll-bar-mode 0)
   (tool-bar-mode t)
    #+END_SRC
 
@@ -199,27 +201,18 @@
     (global-hl-line-mode))
    #+END_SRC
 
-** Improve mode line
-   Use =powerline= to improve the =mode line=
-   #+BEGIN_SRC emacs-lisp
-     (use-package powerline)
-   #+END_SRC
 
 ** Set theme
    Use =moe-dark= theme
    #+BEGIN_SRC emacs-lisp
-     (use-package moe-theme
-       :after (powerline)
-       :config
-       (powerline-moe-theme)
-       (moe-dark))
+     (load-theme 'spacemacs-dark t)
    #+END_SRC
 
 ** Set defualt font
    Increase =font-height=
    #+BEGIN_SRC emacs-lisp
-     ;; (set-face-attribute 'default nil :height 250 :family "Inconsolata")
-     (set-face-attribute 'default nil :height 250)
+     (set-face-attribute 'default nil :height 250 :family "Inconsolata")
+     ;; (set-face-attribute 'default nil :height 250)
    #+END_SRC
 
 ** Defualt max line length
@@ -337,7 +330,7 @@
    (ido-mode t)
    (setq ido-enable-flex-matching t)
    #+END_SRC
-
+1
 * Keybindings
   #+BEGIN_SRC emacs-lisp
     (global-set-key (kbd "M-o") 'other-window)
@@ -350,6 +343,10 @@
     (global-set-key (kbd "C-o") 'insert-newline)
     (global-set-key (kbd "C-M-o") 'create-newline)
     (global-set-key (kbd "M-;") 'comment-or-uncomment-region-or-line)
+
+    (global-set-key (kbd "C-M-/") 'undo-redo)
+
+    (global-set-key(kbd "C-x C-j") 'join-line)
 
     (global-set-key (kbd "M-<SPC>") 'hippie-expand)
 
@@ -411,16 +408,6 @@
 **** Don't include footer
      #+BEGIN_SRC emacs-lisp
       (setq org-html-postamble nil)
-    #+END_SRC
-**** Use htmlize
-     #+BEGIN_SRC emacs-lisp
-       (use-package htmlize)
-     #+END_SRC
-*** TODO LaTeX
-    #+BEGIN_SRC emacs-lisp
-      (add-to-list 'org-latex-packages-alist '("" "mypackage"))
-      (add-to-list 'org-latex-packages-alist '("" "amsthm"))
-      (setq org-list-allow-alphabetical t)
     #+END_SRC
 * Packages
 ** General
@@ -490,13 +477,29 @@
         :config
         (company-flx-mode +1))
     #+END_SRC
-*** c++
-    #+BEGIN_SRC emacs-lisp
-      (use-package company-irony
-        :after (company)
-        :init
-        (add-to-list 'company-backends 'company-irony))
-    #+END_SRC
+** lsp
+   #+begin_src emacs-lisp
+     (use-package lsp-mode
+       :hook ;; replace XXX-mode with concrete major-mode(e. g. python-mode)
+       ;; (XXX-mode . lsp-deferred)
+       (python-mode . lsp-deferred)
+       (LaTeX-mode . lsp-deferred)
+       (lsp-mode . lsp-enable-which-key-integration)
+       :commands (lsp lsp-deferred)
+       :custom
+       lsp-keymap-prefix "C-c l")
+
+     (use-package lsp-ui
+       :commands lsp-ui-mode)
+   #+end_src
+** Projectile
+   #+begin_src emacs-lisp
+     (use-package projectile
+       :bind-keymap
+       ("C-c p" . projectile-command-map)
+       :config
+       (projectile-mode +1)
+   #+end_src
 ** which-key
    #+BEGIN_SRC emacs-lisp
      (use-package which-key
@@ -558,161 +561,162 @@
          :custom
          (reftex-plug-into-AUCTeX t))
      #+END_SRC
-* Mail
-** packages
-   #+BEGIN_SRC emacs-lisp
-     ;; use imagemagick if avaliable
-     (when (fboundp 'imagemagick-register-types)
-       (imagemagick-register-types))
+# * Mail
+# ** packages
+#     #+BEGIN_SRC emacs-lisp
+#      ;; use imagemagick if avaliable
+#      (when (fboundp 'imagemagick-register-types)
+#        (imagemagick-register-types))
 
-     (use-package org-mime)
+#      (use-package org-mime)
 
-     (use-package smtpmail
-       :after mu4e
-       :custom
-       (smtpmail-queue-mail nil))
+#      (use-package smtpmail
+#        :after mu4e
+#        :custom
+#        (smtpmail-queue-mail nil))
 
-     (use-package org-mu4e
-       :load-path "/usr/share/emacs/site-lisp/mu4e/"
-       :commands org-mu4e-compose-org-mode
-       :ensure nil
-       :custom
-       (org-mu4e-convert-to-html t))
+#      (use-package org-m
+#        u4e
+#        :load-path "/usr/share/emacs/site-lisp/mu4e/"
+#        :commands org-mu4e-compose-org-mode
+#        :ensure nil
+#        :custom
+#        (org-mu4e-convert-to-html t))
 
-     (use-package mu4e-alert
-       :after mu4e
-       :hook ((after-init . mu4e-alert-enable-mode-line-display)
-              (after-init . mu4e-alert-enable-notifications))
-       :config (mu4e-alert-set-default-style 'libnotify)
-       :custom
-       (mu4e-alert-interesting-mail-query
-        (concat
-         "flag:unread maildir:/personal/INBOX "
-         "OR "
-         "flag:unread maildir:/ucsc/INBOX ")))
-   #+END_SRC
-** mu4e
-   #+BEGIN_SRC emacs-lisp
-     (use-package mu4e
-       :load-path "/usr/share/emacs/site-lisp/mu4e/"
-       :ensure nil
-       :ensure-system-package mu
-       :demand
-       :bind ("C-c m" . mu4e)
-       :config
-       ;; to view selected message in the browser. no signingr required.
-       (add-to-list 'mu4e-view-actions
-                    '("ViewInBrowser" . mu4e-action-view-in-browser) t)
-       (add-hook 'mu4e-view-mode-hook #'visual-line-mode)
+#      (use-package mu4e-alert
+#        :after mu4e
+#        :hook ((after-init . mu4e-alert-enable-mode-line-display)
+#               (after-init . mu4e-alert-enable-notifications))
+#        :config (mu4e-alert-set-default-style 'libnotify)
+#        :custom
+#        (mu4e-alert-interesting-mail-query
+#         (concat
+#          "flag:unread maildir:/personal/INBOX "
+#          "OR "
+#          "flag:unread maildir:/ucsc/INBOX ")))
+#    #+END_SRC
+# ** mu4e
+#    #+BEGIN_SRC emacs-lisp
+#      (use-package mu4e
+#        :load-path "/usr/share/emacs/site-lisp/mu4e/"
+#        :ensure nil
+#        :ensure-system-package mu
+#        :demand
+#        :bind ("C-c m" . mu4e)
+#        :config
+#        ;; to view selected message in the browser. no signingr required.
+#        (add-to-list 'mu4e-view-actions
+#                     '("ViewInBrowser" . mu4e-action-view-in-browser) t)
+#        (add-hook 'mu4e-view-mode-hook #'visual-line-mode)
 
-       ;; <tab> to nav to links, <RET> to open them in browser
-       (add-hook 'mu4e-view-mode-hook
-                 (lambda()
-                   (local-set-key (kbd "<RET>") 'mu4e~view-browse-url-from-binding)
-                   (local-set-key (kbd "<tab>") 'shr-next-link)
-                   (local-set-key (kbd "<backtab>") 'shr-previous-link)))
+#        ;; <tab> to nav to links, <RET> to open them in browser
+#        (add-hook 'mu4e-view-mode-hook
+#                  (lambda()
+#                    (local-set-key (kbd "<RET>") 'mu4e~view-browse-url-from-binding)
+#                    (local-set-key (kbd "<tab>") 'shr-next-link)
+#                    (local-set-key (kbd "<backtab>") 'shr-previous-link)))
 
-       ;; dynamically set width of the colums to take whole width
-       (add-hook 'mu4e-headers-mode-hook
-                 (lambda()
-                   (setq mu4e-headers-fields
-                         `((:human-date . 12)
-                           (:flags . 4)
-                           (:from-or-to . 15)
-                           (:subject . ,(- (window-body-width) 47))
-                           (:size . 7)))))
+#        ;; dynamically set width of the colums to take whole width
+#        (add-hook 'mu4e-headers-mode-hook
+#                  (lambda()
+#                    (setq mu4e-headers-fields
+#                          `((:human-date . 12)
+#                            (:flags . 4)
+#                            (:from-or-to . 15)
+#                            (:subject . ,(- (window-body-width) 47))
+#                            (:size . 7)))))
 
-       ;; spell check
-       (add-hook 'mu4e-compose-mode-hook
-                 (lambda()
-                   "My settings for message composition."
-                   (visual-line-mode)
-                   (org-mu4e-compose-org-mode)
-                   (use-hard-newlines -1)
-                   (flyspell-mode)))
-       (setq mu4e-contexts
-         (list
-          (make-mu4e-context
-           :name "personal"
-           :enter-func (lambda() (mu4e-message "Entering context personal"))
-           :leave-func (lambda() (mu4e-message "Leaving context personal"))
-           :match-func (lambda(msg)
-                         (when msg
-                           (mu4e-message-contact-field-matches
-                            msg '(:from :to :cc :bcc) "ilay.raz@gmail.com")))
-           :vars '((user-mail-address . "ilay.raz@gmail.com")
-                   (user-full-name . "Ilay Raz")
-                   (mu4e-sent-folder . "/personal/[personal].Sent Mail")
-                   (mu4e-drafts-folder . "/personal/[personal].drafts")
-                   (mu4e-trash-folder . "/personal/[personal].Trash")
-                   (mu4e-compose-format-flowed . t)
-                   (smtpmail-queue-dir . "~/Maildir/personal/queue/cur")
-                   (message-send-mail-function . smtpmail-send-it)
-                   (smtpmail-smtp-user . "ilay.raz")
-                   (smtpmail-default-smtp-server . "smtp.gmail.com")
-                   (smtpmail-smtp-server . "smtp.gmail.com")
-                   (smtpmail-smtp-service . 587)
-                   (smtpmail-debug-info . t)
-                   (smtpmail-debug-verbose . t)
-                   (mu4e-maildir-shortcuts . ( ("/personal/INBOX"                 . ?i)
-                                                ("/personal/[personal].Sent Mail" . ?s)
-                                                ("/personal/[personal].Trash"     . ?t)
-                                                ("/personal/[personal].All Mail"  . ?a)
-                                                ("/personal/[personal].Starred"   . ?r)
-                                                ("/personal/[personal].drafts"    . ?d)))))
+#        ;; spell check
+#        (add-hook 'mu4e-compose-mode-hook
+#                  (lambda()
+#                    "My settings for message composition."
+#                    (visual-line-mode)
+#                    (org-mu4e-compose-org-mode)
+#                    (use-hard-newlines -1)
+#                    (flyspell-mode)))
+#        (setq mu4e-contexts
+#          (list
+#           (make-mu4e-context
+#            :name "personal"
+#            :enter-func (lambda() (mu4e-message "Entering context personal"))
+#            :leave-func (lambda() (mu4e-message "Leaving context personal"))
+#            :match-func (lambda(msg)
+#                          (when msg
+#                            (mu4e-message-contact-field-matches
+#                             msg '(:from :to :cc :bcc) "ilay.raz@gmail.com")))
+#            :vars '((user-mail-address . "ilay.raz@gmail.com")
+#                    (user-full-name . "Ilay Raz")
+#                    (mu4e-sent-folder . "/personal/[personal].Sent Mail")
+#                    (mu4e-drafts-folder . "/personal/[personal].drafts")
+#                    (mu4e-trash-folder . "/personal/[personal].Trash")
+#                    (mu4e-compose-format-flowed . t)
+#                    (smtpmail-queue-dir . "~/Maildir/personal/queue/cur")
+#                    (message-send-mail-function . smtpmail-send-it)
+#                    (smtpmail-smtp-user . "ilay.raz")
+#                    (smtpmail-default-smtp-server . "smtp.gmail.com")
+#                    (smtpmail-smtp-server . "smtp.gmail.com")
+#                    (smtpmail-smtp-service . 587)
+#                    (smtpmail-debug-info . t)
+#                    (smtpmail-debug-verbose . t)
+#                    (mu4e-maildir-shortcuts . ( ("/personal/INBOX"                 . ?i)
+#                                                 ("/personal/[personal].Sent Mail" . ?s)
+#                                                 ("/personal/[personal].Trash"     . ?t)
+#                                                 ("/personal/[personal].All Mail"  . ?a)
+#                                                 ("/personal/[personal].Starred"   . ?r)
+#                                                 ("/personal/[personal].drafts"    . ?d)))))
 
-          (make-mu4e-context
-           :name "ucsc"
-           :enter-func (lambda() (mu4e-message "Entering context ucsc"))
-           :leave-func (lambda() (mu4e-message "Leaving context ucsc"))
-           :match-func (lambda(msg)
-                         (when msg
-                           (mu4e-message-contact-field-matches
-                            msg '(:from :to :cc :bcc) "ilraz@ucsc.edu")))
-           :vars '((user-mail-address . "ilraz@ucsc.edu")
-                   (user-full-name . "Ilay Raz")
-                   (mu4e-sent-folder . "/ucsc/[ucsc].Sent Mail")
-                   (mu4e-drafts-folder . "/ucsc/[ucsc].drafts")
-                   (mu4e-trash-folder . "/ucsc/[ucsc].Trash")
-                   (mu4e-compose-format-flowed . t)
-                   (smtpmail-queue-dir . "~/Maildir/ucsc/queue/cur")
-                   (message-send-mail-function . smtpmail-send-it)
-                   (smtpmail-smtp-user . "ilraz")
-                   (smtpmail-default-smtp-server . "smtp.gmail.com")
-                   (smtpmail-smtp-server . "smtp.gmail.com")
-                   (smtpmail-smtp-service . 587)
-                   (smtpmail-debug-info . t)
-                   (smtpmail-debug-verbose . t)
-                   (mu4e-maildir-shortcuts . ( ("/ucsc/INBOX"             . ?i)
-                                                ("/ucsc/[ucsc].Sent Mail" . ?s)
-                                                ("/ucsc/[ucsc].Trash"     . ?t)
-                                                ("/ucsc/[ucsc].All Mail"  . ?a)
-                                                ("/ucsc/[ucsc].Starred"   . ?r)
-                                                ("/ucsc/[ucsc].drafts"    . ?d)))))))
-       :custom
-       (mu4e-maildir (expand-file-name "~/Maildir"))
+#           (make-mu4e-context
+#            :name "ucsc"
+#            :enter-func (lambda() (mu4e-message "Entering context ucsc"))
+#            :leave-func (lambda() (mu4e-message "Leaving context ucsc"))
+#            :match-func (lambda(msg)
+#                          (when msg
+#                            (mu4e-message-contact-field-matches
+#                             msg '(:from :to :cc :bcc) "ilraz@ucsc.edu")))
+#            :vars '((user-mail-address . "ilraz@ucsc.edu")
+#                    (user-full-name . "Ilay Raz")
+#                    (mu4e-sent-folder . "/ucsc/[ucsc].Sent Mail")
+#                    (mu4e-drafts-folder . "/ucsc/[ucsc].drafts")
+#                    (mu4e-trash-folder . "/ucsc/[ucsc].Trash")
+#                    (mu4e-compose-format-flowed . t)
+#                    (smtpmail-queue-dir . "~/Maildir/ucsc/queue/cur")
+#                    (message-send-mail-function . smtpmail-send-it)
+#                    (smtpmail-smtp-user . "ilraz")
+#                    (smtpmail-default-smtp-server . "smtp.gmail.com")
+#                    (smtpmail-smtp-server . "smtp.gmail.com")
+#                    (smtpmail-smtp-service . 587)
+#                    (smtpmail-debug-info . t)
+#                    (smtpmail-debug-verbose . t)
+#                    (mu4e-maildir-shortcuts . ( ("/ucsc/INBOX"             . ?i)
+#                                                 ("/ucsc/[ucsc].Sent Mail" . ?s)
+#                                                 ("/ucsc/[ucsc].Trash"     . ?t)
+#                                                 ("/ucsc/[ucsc].All Mail"  . ?a)
+#                                                 ("/ucsc/[ucsc].Starred"   . ?r)
+#                                                 ("/ucsc/[ucsc].drafts"    . ?d)))))))
+#        :custom
+#        (mu4e-maildir (expand-file-name "~/Maildir"))
 
-       ;; get mail
-       (mu4e-get-mail-command "mbsync -c ~/.config/mbsync/.mbsync -a")
-       (mu4e-view-prefer-html t)
-       (mu4e-update-interval 180)
-       (mu4e-headers-auto-update t)
-       (mu4e-compose-signature-auto-include nil)
-       (mu4e-compose-format-flowed t)
+#        ;; get mail
+#        (mu4e-get-mail-command "mbsync -c ~/.config/mbsync/.mbsync -a")
+#        (mu4e-view-prefer-html t)
+#        (mu4e-update-interval 180)
+#        (mu4e-headers-auto-update t)
+#        (mu4e-compose-signature-auto-include nil)
+#        (mu4e-compose-format-flowed t)
 
-       (mu4e-view-show-images t)
-       (mu4e-sent-messages-behavior 'delete) ;; let IMAP take care of this
+#        (mu4e-view-show-images t)
+#        (mu4e-sent-messages-behavior 'delete) ;; let IMAP take care of this
 
-       ;; needed for mbsync
-       (mu4e-change-filenames-when-moving t)
+#        ;; needed for mbsync
+#        (mu4e-change-filenames-when-moving t)
 
-       (mu4e-attachment-dir "~/Downloads")
-       (message-kill-buffer-on-exit t)
-       (mu4e-compose-dont-reply-to-self)
-       (mu4e-view-show-addresses 't)
-       (mu4e-confirm-quit nil)
+#        (mu4e-attachment-dir "~/Downloads")
+#        (message-kill-buffer-on-exit t)
+#        (mu4e-compose-dont-reply-to-self)
+#        (mu4e-view-show-addresses 't)
+#        (mu4e-confirm-quit nil)
 
-       ;; mu4e-context
-       (mu4e-context-policy 'pick-first)
-       (mu4e-compose-context-policy 'always-ask))
-   #+END_SRC
+#        ;; mu4e-context
+#        (mu4e-context-policy 'pick-first)
+#        (mu4e-compose-context-policy 'always-ask))
+#    #+END_SRC
